feat: add pincode availability
